--- a/src/stylesheets/Nav.scss
+++ b/src/stylesheets/Nav.scss
@@ -129,7 +129,14 @@ body{
             
             }
         }
-    
+        .snb-goals-null-text{
+            font-family: 'Pretendard';
+            font-weight: 200;
+            font-size: 15px;
+            color: rgb(140, 139, 139);
+            align-items: center;
+            padding: 10px 0px 25px 2px;
+        }
 
     .snb-todo-list-box{
         //width: 100vw;
