--- a/src/stylesheets/OrderItem.scss
+++ b/src/stylesheets/OrderItem.scss
@@ -85,7 +85,7 @@
                 cursor: pointer;
             }
             .todos-list-input{
-                width: fit-content;
+                width: auto;
                 position: relative;
                 border: 0;
                 border-bottom: 0px solid #00000000;
