--- a/src/stylesheets/Setting.scss
+++ b/src/stylesheets/Setting.scss
@@ -1,11 +1,12 @@
 @import './abstracts/variables';
 @import './abstracts/font';
+@import './abstracts/mixin';
 
 .setting-settings-list-wrap{
     display: flex;
     flex-flow: column nowrap;
     //justify-content: space-between;
-    padding: 10px 10px 10px 10px ;
+    padding: 0px 0px 0px 0px ;
     margin: 0 auto;
     width: 65%;
 
@@ -22,7 +23,7 @@
             // hover style 변경, hover 영역 전체로 확대 
             // icon opacity 조정 
 
-            padding: 5px 2px;
+            padding: 4px 2px;
             display: flex;
             align-items: center;
             justify-content: flex-start;
@@ -30,7 +31,7 @@
             line-height: 0;
             //min-width:fit-content;
             //max-width:fit-content;
-            margin-bottom: 10px;
+            margin-bottom: 4px;
             width: 100%;
 
             .setting-list-button-wrap{
@@ -44,6 +45,7 @@
                 .settings-list-icon{
                     font-size: 1.5em;
                     color: $text-black;
+                    stroke-width: 2;
                    
                 }
     
@@ -57,9 +59,9 @@
                     overflow: hidden;
                     color: $text-black;
                    
-                    p{
+                    p {
                         max-width: 200px; 
-                        display:block; 
+                        display: block; 
                         white-space: nowrap;
                         text-overflow: ellipsis;
                         font-weight: 300;
@@ -69,19 +71,24 @@
                 
             
             .setting-list-arrow{
-                color: lightgrey;
+                //color: lightgrey;
                 font-size: 17px;
                 // opacity -> 
-                font-weight: 100;
+                //font-weight: 500;
                 justify-content: flex-end
             }
 
             }
-
+            .setting-list-version{
+                color: $text-black;
+                opacity: 0.9;
+                font-size: 13px;
+                font-weight: 300;
+                font-family: 'Pretendard';
+            }
            
             
         }
        
     }
-    
 }
