kenna: fix: signin 컴포넌트 수정

--- a/src/stylesheets/Signin.css
+++ b/src/stylesheets/Signin.css
@@ -108,4 +108,9 @@ a {
   font-size: 13px;
   margin: 0;
 }
+
+.logging-progress, .logging-progress > span {
+  width: 16px;
+  height: 16px;
+}
 /*# sourceMappingURL=Signin.css.map */
